# paste-bin

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: CI.yaml  CI.yml
src/: main.rs
src/app/: assets.rs  mod.rs  state.rs
src/app/config/: lang.rs
src/app/dao/: paste.rs
src/app/entity/: mod.rs
src/app/service/: index.rs  mod.rs  paste.rs  public.rs  theme.rs
src/app/template/: mod.rs
src/cmd/: mod.rs
templates/: error.html  index.html  layout.html  paste.html
