[package]
edition = "2021"
name = "paste-bin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
askama = "0.11.0"
base-62 = "0.1.1"
chrono = {version = "0.4.19", features = ["serde"]}
lazy_static = "1.4.0"
mime_guess = "2.0.3"
redis = "0.21.4"
rust-embed = "6.3.0"
serde = {version = "1.0.132", features = ["derive"]}
serde_json = "1.0.73"
serde_variant = "0.1.1"
sha2 = "0.10.0"
syntect = "4.6.0"
validator = {version = "0.14.0", features = ["derive"]}
